2006-04-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/mvc/__init__.py: making BaseController
	available in mvc namespace.

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.redirect):
	permit 302 redirects also with new optional parameter, "status". 

	* SkunkWeb/Services/mvc/base.py: adding base controller class.

2006-04-19  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swpython.c.in: adding #include for alloca.h (thanks
	James Phillips).

2006-04-14  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/computils.py: syncing with wnyc version, and moving out
	of skunk package (as skunk4 would override it anyway).

2006-04-12  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/web/protocol.py (_processRequest): new
	RouteConnection hook, for mvc service.

	* SkunkWeb/Services/mvc/services/routing.py: use new
	RouteConnection hook, so routing occurs after vhost scoping.

2006-03-11 Jacob Smullyan <smulloni@smullyan.org>
	
	* pylibs/{string8859.py,skunkdoc,pargen}: moving out to "misc"
	directory out of this project, as these haven't been distributed
	for some time.

	* configure.in, configure, SkunkWeb/configure.in,
	SkunkWeb/configure: upping version to 3.4.1.

2006-03-02  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/skunklib/_normpath.c: patch from Drew to use alloca
	rather than malloc (possible fix for weird free() bug).

2006-02-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/form.py (DomainField.checkValue): better error
	message (patch from Dave Cash)

2005-12-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/mvc/__init__.py: adding misnamed mvc service
	(m and v are missing).

2005-09-20  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/skunk/computils.py: convenience functions for dealing
	with AE.

2005-09-14  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/templating/UrlBuilder.py: url function now htmlquotes.

2005-08-16  Jacob Smullyan  <smulloni@smullyan.org>
