@@ -1,0 +1,8 @@
+import logging
+logger=logging.getLogger('mvc')
+debug=logger.debug
+info=logger.info
+exception=logger.exception
+warn=logger.warn
+error=logger.error
+__all__=['debug', 'info', 'exception', 'warn', 'error', 'logger']
